--- a/src/main/resources/lang/economy.yml
+++ b/src/main/resources/lang/economy.yml
@@ -14,6 +14,8 @@ error:
   invalid-amount-positive: "Invalid amount. Please provide a positive number."
   no-challenges: "There are no challengers available."
   challenge-not-found: "This Challenge was not found."
+  coinflip-funds-challenger: "You do not have enough Gold anymore."
+  coinflip-funds-acceptor: "Challenger does not have enough Gold anymore."
 
 balance: "§6%player%'s balance:"
 currency:
@@ -36,6 +38,11 @@ coinflip:
   created: "§aYou have created a coinflip(§6%amount% Gold§a) betting on: §e%choice%"
   win: "§e%result%! You win and received §6%amount% Gold§e."
   loss: "§e%result%! You lose..."
+  gui:
+    title: "§6Coinflip Challengers"
+    name: "§e%player%"
+    bet: "§7Bet: §6%amount% Gold"
+    choice: "§7Choice: §e%choice%"
 
 pay:
   target: "§a%player%§7 has paid you %amount%%currency%§7."
