--- a/src/main/resources/lang/economy.yml
+++ b/src/main/resources/lang/economy.yml
@@ -35,6 +35,9 @@ actionbar:
 
 coinflip:
   flipping: "§eFlipping coin..."
+  accept: "§aAccept Challenge [LEFT CLICK]"
+  cancel: "§cCancel Challenge [LEFT CLICK]"
+  cancelled: "§cYou have cancelled your Coinflip."
   created: "§aYou have created a coinflip(§6%amount% Gold§a) betting on: §e%choice%"
   win: "§e%result%! You win and received §6%amount% Gold§e."
   loss: "§e%result%! You lose..."
