--- a/src/main/resources/lang/citems.yml
+++ b/src/main/resources/lang/citems.yml
@@ -7,6 +7,7 @@ error:
   wrong-action: "Unrecognized Action. Use 'left' or 'right'."
   inter-not-found: "Interaction not found: %id%"
   invalid-icon: "Invalid Icon."
+  not-citem: "This item is not a valid Citem."
   lore:
     invalid-row: "Invalid row number."
     out-of-bounds: "Lore row out of bounds."
