added dialogs, equippable citem

--- a/src/main/resources/lang/citems.yml
+++ b/src/main/resources/lang/citems.yml
@@ -25,6 +25,8 @@ info:
     lore-remove: "Usage: /citem lore remove <row>"
     models: "Usage: /citem model <model id>"
     rename: "Usage: /citem rename <name>"
+    color: "Usage: /citem color <#hex>"
+    equippable: "Usage: /citem equippable <head/chest/legs/feet>"
     save: "Usage: /citem save <id>"
     update: "Usage: /citem update <id>"
     cgive: "Usage: /cgive <player> <id> [amount]"
@@ -56,6 +58,8 @@ help:
   flag: "%cyan_300%/citem flag <add|remove> §7- Add flags to the item in your hand."
   action: "%cyan_300%/citem action <left|right> <inter-id> §7- Add an interaction to an Item."
   tooltip: "%cyan_300%/citem tooltip <hide|tooltip_id> §7- hide or change the tooltip of the item."
+  color: "%cyan_300%/citem color <#hex> §7- Set the color of the item in your hand."
+  equippable: "%cyan_300%/citem equippable <head/chest/legs/feet> §7- Make the item equippable in the specified slot."
   model: "%cyan_300%/citem model <model_id> §7- Set the model of the item in your hand."
   tag: "%cyan_300%/citem tag <tag> §7- Add tags to an item."
   info: "%cyan_300%/citem info §7- Displays info of the held Citem."
@@ -89,6 +93,7 @@ saved: "§aItem saved successfully as §e%id%"
 updated: "§aItem updated successfully."
 given: "§aGiven §e%amount% %id% §ato §e%player%§a."
 removed: "§aRemoved §e%amount% %id% §afrom §e%player%§a."
+equippable: "§aThis item is now equippable in the §e%slot%§a slot."
 
 update:
   removed: "§7Your Item (%item%§7) has been removed as it is outdated."
